# operaton-web-apps

./: .env  .env.development  .gitignore  README.md  docker-compose.yaml  index.html  package-lock.json  package.json  robot.toml
.run/: Operaton+C7 BE.run.xml
atest/: README.md  pyproject.toml
atest/robot/resources/: operaton.resource
atest/robot/resources/legacy-webapps/: keywords.resource  login.resource
atest/robot/resources/webapps/: browser.resource  keywords.resource  login.resource
atest/robot/tests/: cockpit-test-cases.robot  demo.robot  user-stories.md
docs/: Accessibility.md  Coding Conventions.md  Contributing.md  Environment Variables.md  Using-the-API.md
src/: api.js  api.jsx  index.jsx  state.js
src/api/: engine_rest.jsx  helper.jsx
src/api/resources/: auth.js  deployment.js  group.js  history.js  process_definition.js  process_instance.js  task.js  tenant.js  user.js
src/assets/: icons.jsx
src/components/: Accordion.jsx  BPMNViewer.jsx  Bpmn-Viewer.jsx  DMNViewer.jsx  GoTo.jsx  Header.jsx  Search.jsx  Tabs.jsx
src/css/: animation.css  components.css  fonts.css  form.css  layout.css  main.css  normalize.css  variables.css  vars.css
src/pages/: Account.jsx  Admin.jsx  Decisions.jsx  Deployments.jsx  HelloWorld.jsx  Home.jsx  Processes.jsx  StartProcessList.jsx  TaskForm.jsx  Tasks.jsx  _404.jsx
src/pages/Account/: index.jsx  style.css
src/pages/Admin/: index.jsx
src/pages/Deployments/: Bpmn-Viewer.jsx  Deployments.jsx  DeploymentsList.jsx  DeploymentsList_V2.jsx  ProcessDetails.jsx  ResourcesList.jsx  deployments-details.jsx  (+5 more)
(+9 files in other folders)
