[project]
name = "atest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "robotframework>=7.3.2",
    "robotframework-browser>=19.6.2",
]

[dependency-groups]
dev = [
    "robotcode[all]>=1.5.0",
    "robotframework-robocop>=6.5.0",
]
